[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Front/PlayerWalkingAnimation2.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerCharacter.gd" type="Script" id=2]
[ext_resource path="res://Assets/LightMaps/torchmap.png" type="Texture" id=4]
[ext_resource path="res://Assets/LightMaps/light.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Front/PlayerWalkingAnimation4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Front/PlayerWalkingAnimation3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Back/PlayerWalkingAnimationBack1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Back/PlayerWalkingAnimationBack2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Back/PlayerWalkingAnimationBack3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Back/PlayerWalkingAnimationBack4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Front/PlayerWalkingAnimationEquipped3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Back/PlayerWalkingAnimationBackEquipped2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Back/PlayerWalkingAnimationBackEquipped3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Front/PlayerWalkingAnimationEquipped2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Back/PlayerWalkingAnimationBackEquipped4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Front/PlayerWalkingAnimationEquipped4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Front/PlayerWalkingAnimationEquipped1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Player/Walking/Equipped/Back/PlayerWalkingAnimationBackEquipped1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Player/Walking/Empty/Front/PlayerWalkingAnimation1.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walkingback",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "walkingbackequipped",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idleequipped",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idleback",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "idlebackequipped",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 17 ) ],
"loop": true,
"name": "walkingequipped",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0
height = 22.0

[node name="PlayerCharacter" type="KinematicBody2D"]
z_index = 1
collision_mask = 4
script = ExtResource( 2 )

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
z_index = 1
frames = SubResource( 3 )
animation = "idle"

[node name="Flashlight" type="Light2D" parent="."]
show_behind_parent = true
z_index = 1
texture = ExtResource( 4 )
offset = Vector2( 322, 0 )
range_z_max = 1
shadow_enabled = true

[node name="StandardVision" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
energy = 0.5

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="Interacting_Range" type="Area2D" parent="."]
position = Vector2( 0, 12 )
collision_layer = 2
collision_mask = 2

[node name="Interacting" type="CollisionShape2D" parent="Interacting_Range"]
position = Vector2( 0, -12 )
shape = SubResource( 2 )

[node name="Inventory" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )

[connection signal="body_entered" from="Interacting_Range" to="." method="_on_Interacting_Range_body_entered"]
[connection signal="body_exited" from="Interacting_Range" to="." method="_on_Interacting_Range_body_exited"]
